More work on Promotion Qualifiers

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -128,6 +128,14 @@ admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
 admin.pricing.promotionperiodtabs.promotionqualifiers=Promotion Qualifiers
 admin.pricing.promotionperiodtabs.promotionrewards=Promotion Rewards
 admin.pricing.promotionqualifier.edit_disabled=This promotion period cannot be edited because it has expired.
+admin.pricing.promotionqualifiertabs.brands=Brands
+admin.pricing.promotionqualifiertabs.fulfillmentmethods=Fulfillment Methods
+admin.pricing.promotionqualifiertabs.options=Options
+admin.pricing.promotionqualifiertabs.productTypes=Product Types
+admin.pricing.promotionqualifiertabs.products=Products
+admin.pricing.promotionqualifiertabs.shippingaddresszones=Shipping Address Zones
+admin.pricing.promotionqualifiertabs.shippingmethods=Shipping Methods
+admin.pricing.promotionqualifiertabs.skus=Skus
 admin.pricing.promotionreward.discounttype.amount=Fixed Amount
 admin.pricing.promotionreward.discounttype.amountOff=Amount Off
 admin.pricing.promotionreward.discounttype.percentageOff=Percentage Off
@@ -503,6 +511,7 @@ entity.PromotionQualifier.maximumOrderSubtotal=Maximum Order Subtotal
 entity.PromotionQualifier.minimumFulfillmentWeight=Minimum Fulfillment Weight
 entity.PromotionQualifier.minimumItemPrice=Minimum Item Price
 entity.PromotionQualifier.minimumOrderSubtotal=Minimum Order Subtotal
+entity.PromotionQualifier.promotionQualifierID=Promotion Qualifier ID
 entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
 entity.PromotionReward.excludedBrands=Brand Exclusions
@@ -1085,9 +1094,14 @@ entity.promotionCode.promotionCode=Promotion Code
 entity.promotionCode.promotionCode_validateUnique=This promotion code is already in use.
 entity.promotionCode.startDateTime=Start Date/Time
 entity.promotionCode_plural=Promotion Codes
+entity.promotionQualifier.excludedoptions=Excluded Options
+entity.promotionQualifier.options=Options
+entity.promotionQualifier.qualifierType.contentAccess=Content Access
 entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
+entity.promotionQualifier.qualifierType.merchandise=Merchandise
 entity.promotionQualifier.qualifierType.order=Order
-entity.promotionQualifier.qualifierType.product=Product
+entity.promotionQualifier.qualifierType.subscription=Subscription
+entity.promotionQualifier.skus=Skus
 entity.promotionReward=Promotion Reward
 entity.promotionReward.amount=Amount
 entity.promotionReward.amountType=Discount Type
@@ -1123,6 +1137,7 @@ entity.promotionqualifier.brands=Brands
 entity.promotionqualifier.excludedProductTypes=Product Type Exclusions
 entity.promotionqualifier.excludedProducts=Product Exclusions
 entity.promotionqualifier.excludedSkus=SKU Exclusions
+entity.promotionqualifier.excludedbrands=Excluded Brands
 entity.promotionqualifier.fulfillmentMethods=Fulfillment Methods
 entity.promotionqualifier.maximumFulfillmentWeight=Maximum Weight
 entity.promotionqualifier.maximumPrice=Maximum Item Price
