Resolves Issue #211 and Issue #631.  Also is a partial fix for issue #630

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -79,8 +79,13 @@ admin.order.ordertabs.orderreturns=Order Returns
 admin.order.ordertabs.referencingOrders=Referencing Orders
 admin.order.ordertabs.stockreceivers=Stock Receivers
 admin.order.processOrderPayment_nav=Process Payment
-admin.order.processorder.createreturn=Create Retrun Order
-admin.order.processorder.createreturn_nav=Create Return Order
+admin.order.processorder.AddOrderItem=Add Order Item
+admin.order.processorder.AddOrderPayment=Add Order Payment
+admin.order.processorder.cancelOrder=Cancel Order
+admin.order.processorder.closeOrder=Close Order
+admin.order.processorder.createReturn=Create Retrun Order
+admin.order.processorder.placeOnHold=Place Order On Hold
+admin.order.processorder.placeOrder=Place Order
 admin.order.processorder.processOption.autoProcessReceiveReturnFlag=Auto Receive Return
 admin.order.processorder.processOption.autoProcessReturnPaymentFlag=Auto Process Return Credit
 admin.order.processorder.processOption.fulfillmentChargeRefundAmount=Fulfillment Charge Refund
@@ -88,6 +93,7 @@ admin.order.processorder.processOption.referencedOrderPaymentID=Payment to Credi
 admin.order.processorder.processOption.returnLocationID=Return Location
 admin.order.processorder.processOption.returnPrice=Return Price
 admin.order.processorder.processOption.returnQuantity=Return Quantity
+admin.order.processorder.takeOffHold=Take Order Off Hold
 admin.order.processorderfulfillment.processOption.locationID=Location ID
 admin.order.processorderfulfillment.processOption.processCreditCard=Process Credit Card
 admin.order.processorderfulfillment.processOption.processCreditCard_hint=Selecting yes will process the credit card(s) on the order to receive payment for the amount of items being fulfilled if payment has not already been received.  If this is the first time a credit card is processed for a given fulfillment, it will also charge the cost of the fulfillment itself.
@@ -872,6 +878,8 @@ entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
 entity.orderDelivery.deliveryOpenDateTime=Delivery Open Date
 entity.orderDeliveryShipping.trackingnumber=Tracking Number
 entity.orderFulfillment.itemDiscountAmountTotal=Item Discounts
+entity.orderFulfillment.quantityDelivered=Quantity Delivered
+entity.orderFulfillment.quantityUndelivered=Quantity Undelivered
 entity.orderFulfillment.shippingCharge=Shipping Charge
 entity.orderFulfillment.shippingMethod=Shipping Method
 entity.orderFulfillment.subtotal=Subtotal
