--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -298,6 +298,7 @@ admin.warehouse.processstockadjustment.processOption.quantity=Quantity
 admin.warehouse.stockadjustments.products=Products
 admin.warehouse.stockreceivertabs.stockreceiveritems=Items Received
 admin.warehouse_nav=Warehouse
+dashboard.tracksessionissue_error=There is an know issue with you current configuration of Mura & Slatwall that will cause the frontend to lock up.  You can either open up your mura /config/settings.ini and set trackSessionInNewThread\=0 or you can update you mura core to the latest version.
 defaultMessage_Boolean={1} must be a valid boolean.
 defaultMessage_CollectionSize_Between={1} size is not between {2} and {3}.
 defaultMessage_CollectionSize_GTE={1} size is not equal to or greater than {2}.
