--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -34,6 +34,7 @@ admin.define.detail=${itemEntityName} Detail
 admin.define.detail_nav=View ${itemEntityName}
 admin.define.detail_title=View ${itemEntityName}
 admin.define.edit=Edit ${itemEntityName}
+admin.define.edit_disabled=This item can not be edited
 admin.define.edit_nav=Edit ${itemEntityName}
 admin.define.edit_title=Edit ${itemEntityName}
 admin.define.list=${itemEntityName} Listing
