--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -496,6 +496,7 @@ entity.Order.paymentAmountTotal=Total Payments
 entity.Order.paymentAuthorizedTotal=Authorized Amount
 entity.Order.previouslyrefundedfulfillment=Previously Refunded Fulfillment
 entity.Order.referencedOrder=Original Order
+entity.Order.referencingPaymentAmountCreditedTotal=Credited on Referencing
 entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
