--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -75,7 +75,11 @@ admin.order.orderpaymenttabs.creditcardtransactions=Credit Card Transactions
 admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
+admin.order.ordertabs.orderitems.returnItems=Return Items
+admin.order.ordertabs.orderitems.saleItems=Sale Items
 admin.order.ordertabs.orderpayments=Order Payments
+admin.order.ordertabs.orderpayments.charges=Charges
+admin.order.ordertabs.orderpayments.credits=Credits
 admin.order.ordertabs.orderreturns=Order Returns
 admin.order.ordertabs.referencingOrders=Referencing Orders
 admin.order.ordertabs.stockreceivers=Stock Receivers
@@ -95,6 +99,7 @@ admin.order.processorder.processOption.returnLocationID=Return Location
 admin.order.processorder.processOption.returnPrice=Return Price
 admin.order.processorder.processOption.returnQuantity=Return Quantity
 admin.order.processorder.takeOffHold=Take Order Off Hold
+admin.order.processorderfulfillment.fulfillItems=Fulfill Items
 admin.order.processorderfulfillment.processOption.locationID=Location ID
 admin.order.processorderfulfillment.processOption.processCreditCard=Process Credit Card
 admin.order.processorderfulfillment.processOption.processCreditCard_hint=Selecting yes will process the credit card(s) on the order to receive payment for the amount of items being fulfilled if payment has not already been received.  If this is the first time a credit card is processed for a given fulfillment, it will also charge the cost of the fulfillment itself.
