--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -107,6 +107,10 @@ admin.order.processorderfulfillment.processOption.quantity=Qty.
 admin.order.processorderfulfillment.processOption.trackingNumber=Shipment Tracking Number
 admin.order.processorderfulfillment_nav=Process Fulfillment
 admin.order.processorderfulfillment_title=Process Order Fulfillment
+admin.order.processorderpayment.authorize=Authroize
+admin.order.processorderpayment.authorizeAndCharge=Authorize & Charge
+admin.order.processorderpayment.chargePreAuthorization=Charge Pre-Authorization
+admin.order.processorderpayment.credit=Credit
 admin.order.processorderpayment.processOption.amount=Process Amount
 admin.order.processorderpayment.processOption.transactionType=Process Action
 admin.order.processorderreturn.processOption.autoProcessReturnPaymentFlag=Auto Process Return Credit
