Cleaned up Price Group UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -138,6 +138,9 @@ admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot 
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.detailpromotion=Promotion Detail
 admin.pricing.detailpromotion.initialperiod=Initial Period
+admin.pricing.pricegroupratetabs.productTypes=Product Types
+admin.pricing.pricegroupratetabs.products=Products
+admin.pricing.pricegroupratetabs.skus=Skus
 admin.pricing.pricegrouptabs.pricegrouprates=Price Group Rates
 admin.pricing.promotionperiod.editdisabled_info=This promotion period cannot be edited because it has expired.
 admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
