More Rate Fixes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -522,6 +522,7 @@ entity.OrderPayment.amountReceived=Amount Received
 entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
+entity.PriceGroupRate.priceGroupRateID=Price Group Rate ID
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.ProductImage.imageFile=Image
 entity.ProductImage_plural=Product Images
