Working on product processing and added generic comment block to services.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -189,12 +189,12 @@ admin.product.createproductimage_nav=Add Product Image
 admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
 admin.product.optiongrouptabs.options=Options
-admin.product.processoption_nav=Add Option
-admin.product.processoptiongroup_nav=Add Option Group
+admin.product.processproduct.addoption=Add Option
+admin.product.processproduct.addoptiongroup=Add Option Group
+admin.product.processproduct.addsku=Add Sku
 admin.product.processproduct.processOption.option=Option
 admin.product.processproduct.processOption.optionGroup=Option Group
-admin.product.processproduct.processOption.skuPrice=New Price
-admin.product.processproduct_nav=Update Price
+admin.product.processproduct.updateskus=Update Skus
 admin.product.producttabs.alternateimages=Alternate Images
 admin.product.producttabs.customattributes=Custom Attributes
 admin.product.producttabs.productcategories=Product Categories
@@ -540,11 +540,11 @@ entity.PromotionReward.excludedBrands=Brand Exclusions
 entity.PromotionReward.excludedOptions=Option Exclusions
 entity.PromotionReward.fulfillmentMethods=Fulfillment Methods
 entity.PromotionReward.itemDiscountType=Discount Type
-entity.PromotionReward.maximumUsePerItem=Maximum Use Per Item
+entity.PromotionReward.maximumUsePerItem=Max. Use Per Item
 entity.PromotionReward.maximumUsePerItem_hint=This defines the maximum nuber of times that this reward can be applied to an item in the cart with multiple quantities.
-entity.PromotionReward.maximumUsePerOrder=Maximum Use Per Order
+entity.PromotionReward.maximumUsePerOrder=Max. Use Per Order
 entity.PromotionReward.maximumUsePerOrder_hint=This defines the maximum number of times that this reward can be applied to an order.
-entity.PromotionReward.maximumUsePerQualification=Maximum Use Per Qualification
+entity.PromotionReward.maximumUsePerQualification=Max. Use Per Qualification
 entity.PromotionReward.maximumUsePerQualification_hint=This setting is mostly used in defining things like buy one get one free where you would qualify by having a quantity of 2 of an item, and then this would be set to 1 with 100% discount.  If there are no qualifiers than this setting is never used.
 entity.PromotionReward.options=Options
 entity.PromotionReward.promotionRewardID=Promotion Reward ID
