Wording on products & skus

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -412,6 +412,7 @@ define.confirm=Confirm
 define.contentAccess=Content Access
 define.create=Create
 define.credit=Credit
+define.default=Default
 define.definedin=Defined In
 define.delete=Delete
 define.detail=Detail
