Working on vendor orders and added some new Reload functionality.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -297,8 +297,7 @@ admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
 admin.tools_nav=Tools / Help
 admin.vendor=Vendor Manager
-admin.vendor.addItems=Add Order Items
-admin.vendor.processVendorOrder_nav=Process Vendor Orders
+admin.vendor.processvendororder.addOrderItems=Add Order Items
 admin.vendor.processvendororder.processOption.cost=Cost
 admin.vendor.processvendororder.processOption.locationID=Location
 admin.vendor.processvendororder.processOption.quantity=Quantity
