Working on issue #609, and this also resolves issue #652 & issue #653

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -211,6 +211,7 @@ admin.product.producttabs.productsettings=Product Settings
 admin.product.producttabs.relatedproducts=Related Products
 admin.product.producttabs.skus=Skus
 admin.product.producttabs.skusettings=Sku Settings
+admin.product.producttabs.vendors=Vendors
 admin.product.producttypetabs.attributesets=Attribute Sets
 admin.product.producttypetabs.products=Products
 admin.product.producttypetabs.productsettings=Product Settings
