Working on issue #609, and resolves issue #649

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -300,6 +300,7 @@ admin.tools_nav=Tools / Help
 admin.vendor=Vendor Manager
 admin.vendor.processvendororder.addOrderItems=Add Order Items
 admin.vendor.processvendororder.processOption.cost=Cost
+admin.vendor.processvendororder.processOption.estimatedReceivalDateTime=Estimated Receival
 admin.vendor.processvendororder.processOption.locationID=Location
 admin.vendor.processvendororder.processOption.quantity=Quantity
 admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
@@ -617,7 +618,9 @@ entity.UpdatePrice=Price
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
 entity.VendorEmailAddress.emailAddress=Email Address
+entity.VendorOrder.estimatedReceivalDateTime=Estimated Receival
 entity.VendorOrderItem=Order Item
+entity.VendorOrderItem.estimatedReceivalDateTime=Estimated Receival
 entity.VendorOrderItem_plural=Order Items
 entity.account=Account
 entity.account.accountEmails=Account Emails
