--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -542,6 +542,8 @@ entity.PromotionQualifier.minimumFulfillmentWeight=Minimum Fulfillment Weight
 entity.PromotionQualifier.minimumItemPrice=Minimum Item Price
 entity.PromotionQualifier.minimumOrderSubtotal=Minimum Order Subtotal
 entity.PromotionQualifier.promotionQualifierID=Promotion Qualifier ID
+entity.PromotionQualifier.rewardMatchingType=Reward Matching Type
+entity.PromotionQualifier.rewardMatchingType_hint=This allows you to specify how the item rewards are matched with this qualifier.  Such as 'only apply rewards to items that match the same x as this qualifier'
 entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
 entity.PromotionReward.excludedBrands=Brand Exclusions
@@ -1660,6 +1662,12 @@ permission.warehouse.liststockreceiver=Stock Receiver - List
 permission.warehouse.savestockreceiver=Stock Receiver - Save
 print.packingSlip=Packing Slip
 print.packingslip=Packing Slip
+promotionQualifier.rewardMatchingType.any=Any
+promotionQualifier.rewardMatchingType.brand=Brand
+promotionQualifier.rewardMatchingType.option=Option
+promotionQualifier.rewardMatchingType.product=Product
+promotionQualifier.rewardMatchingType.productType=Product Type
+promotionQualifier.rewardMatchingType.sku=Sku
 setting.brandDisplayTemplate=Brand Display Template
 setting.brandHTMLTitleString=Brand HTML Title String
 setting.brandMetaDescriptionString=Brand Meta Description String
