Working on stock adjustments

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -312,6 +312,12 @@ admin.vendor.vendortabs.vendorbrands=Brands
 admin.vendor.vendortabs.vendororders=Orders
 admin.vendor_nav=Vendors
 admin.warehouse=Warehouse Manager
+admin.warehouse.createlocationtransferadjustment=Location Transfer Adjustment
+admin.warehouse.createlocationtransferadjustment_nav=Location Transfer Adjustment
+admin.warehouse.createmanualinadjustment=Manual In Adjustment
+admin.warehouse.createmanualinadjustment_nav=Manual In Adjustment
+admin.warehouse.createmanualoutadjustment=Manual Out Adjustment
+admin.warehouse.createmanualoutadjustment_nav=Manual Out Adjustment
 admin.warehouse.processStockAdjustment_actions=Process Stock Adjustment
 admin.warehouse.processStockAdjustment_nav=Add Stock Adjustment Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
