More work on Stock Adjustments

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -318,8 +318,8 @@ admin.warehouse.createmanualinadjustment=Manual In Adjustment
 admin.warehouse.createmanualinadjustment_nav=Manual In Adjustment
 admin.warehouse.createmanualoutadjustment=Manual Out Adjustment
 admin.warehouse.createmanualoutadjustment_nav=Manual Out Adjustment
-admin.warehouse.processStockAdjustment_actions=Process Stock Adjustment
-admin.warehouse.processStockAdjustment_nav=Add Stock Adjustment Items
+admin.warehouse.processStockAdjustment.processAdjustment=Process Adjustment
+admin.warehouse.processstockadjustment.addItems=Add Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
 admin.warehouse.stockadjustments.products=Products
 admin.warehouse.stockreceivertabs.stockreceiveritems=Items Received
