--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -318,6 +318,8 @@ admin.warehouse.createmanualinadjustment=Manual In Adjustment
 admin.warehouse.createmanualinadjustment_nav=Manual In Adjustment
 admin.warehouse.createmanualoutadjustment=Manual Out Adjustment
 admin.warehouse.createmanualoutadjustment_nav=Manual Out Adjustment
+admin.warehouse.detailstockadjustment.fromlocationname=From Location
+admin.warehouse.detailstockadjustment.tolocationname=To Location
 admin.warehouse.processStockAdjustment.processAdjustment=Process Adjustment
 admin.warehouse.processstockadjustment.addItems=Add Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
