added company to subscription usage list

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -442,6 +442,7 @@ define.fulfillment=Fulfillment
 define.fulfullment=Fulfillment
 define.general=General
 define.global=Global
+define.gracePeriod=Grace Period
 define.here=Here
 define.inheritance=Inheritance
 define.inherited=Inherited
