Working on stock adjustments.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -597,6 +597,7 @@ entity.ShippingMethod_plural=Shipping Methods
 entity.Sku.exclusive=Image is exclusive for this sku
 entity.Sku.priceGroupRates=Price Group Rates
 entity.Sku.userDefinedPriceFlag=User Defined Price
+entity.StockAdjustment.stockAdjustmentStatusType=Status
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.StockAdjustmentItem_plural=Stock Adjustment Items
 entity.StockReceiver.receiverType.vendorOrder=Vendor Order
