Cleaned up update UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -250,6 +250,12 @@ admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.deletesetting_nav=Remove Setting Override
 admin.setting.detailslatwallupdate=Slatwall Update Utility
+admin.setting.detailslatwallupdate.availableBleedingEdgeVersion=Available Bleeding Edge Version
+admin.setting.detailslatwallupdate.availableStableVersion=Available Stable Version
+admin.setting.detailslatwallupdate.bleedingEdge=Bleeding Edge
+admin.setting.detailslatwallupdate.currentReleaseType=Current Release Type
+admin.setting.detailslatwallupdate.currentVersion=Current Version
+admin.setting.detailslatwallupdate.stable=Stable
 admin.setting.detailslatwallupdate_nav=Update Slatwall
 admin.setting.emailtabs.emailsettings=Email Settings
 admin.setting.emailtemplatetabs.body=Email Body
