--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -558,6 +558,11 @@ entity.PromotionQualifier.minimumItemPrice=Minimum Item Price
 entity.PromotionQualifier.minimumOrderSubtotal=Minimum Order Subtotal
 entity.PromotionQualifier.promotionQualifierID=Promotion Qualifier ID
 entity.PromotionQualifier.rewardMatchingType=Reward Matching Type
+entity.PromotionQualifier.rewardMatchingType.any=Any
+entity.PromotionQualifier.rewardMatchingType.brand=Brand
+entity.PromotionQualifier.rewardMatchingType.product=Product
+entity.PromotionQualifier.rewardMatchingType.productType=Product Type
+entity.PromotionQualifier.rewardMatchingType.sku=Sku
 entity.PromotionQualifier.rewardMatchingType_hint=This allows you to specify how the item rewards are matched with this qualifier.  Such as 'only apply rewards to items that match the same x as this qualifier'
 entity.PromotionReward.applicableTerm=Applicable Subscription Term
 entity.PromotionReward.brands=Brands
@@ -1678,12 +1683,6 @@ permission.warehouse.liststockreceiver=Stock Receiver - List
 permission.warehouse.savestockreceiver=Stock Receiver - Save
 print.packingSlip=Packing Slip
 print.packingslip=Packing Slip
-promotionQualifier.rewardMatchingType.any=Any
-promotionQualifier.rewardMatchingType.brand=Brand
-promotionQualifier.rewardMatchingType.option=Option
-promotionQualifier.rewardMatchingType.product=Product
-promotionQualifier.rewardMatchingType.productType=Product Type
-promotionQualifier.rewardMatchingType.sku=Sku
 setting.brandDisplayTemplate=Brand Display Template
 setting.brandHTMLTitleString=Brand HTML Title String
 setting.brandMetaDescriptionString=Brand Meta Description String
