--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -48,7 +48,6 @@ admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_nav=Save ${itemEntityName}
 admin.define.save_success=The ${itemEntityName} was saved sucessfully.
 admin.define.save_title=Save ${itemEntityName}
-admin.detailshippingmethod.norates_info=Currently there are no rates defined for this shipping method.  You need to define at least one rate for this shipping method to be able to be used on the frontend.  When creating a new rate, you will be able to define which of the active shipping provider integrations you would like to use for the rate, or just define a static amount
 admin.export.list=Export Entire List
 admin.export.listfiltered=Export Filtered List
 admin.integration=Integration Management
@@ -138,6 +137,7 @@ admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot 
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.detailpromotion=Promotion Detail
 admin.pricing.detailpromotion.initialperiod=Initial Period
+admin.pricing.detailpromotion.norewards_info=Currently there are no rewards assigned to this promotion.  You have created the promotion and setup an initial period, but you need to open that promotion period below and define what this promotion will be for.
 admin.pricing.pricegroupratetabs.productTypes=Product Types
 admin.pricing.pricegroupratetabs.products=Products
 admin.pricing.pricegroupratetabs.skus=Skus
@@ -249,6 +249,7 @@ admin.setting.createshippingmethodrate_nav=Manual Rate
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.deletesetting_nav=Remove Setting Override
+admin.setting.detailshippingmethod.norates_info=Currently there are no rates defined for this shipping method.  You need to define at least one rate for this shipping method to be able to be used on the frontend.  When creating a new rate, you will be able to define which of the active shipping provider integrations you would like to use for the rate, or just define a static amount
 admin.setting.detailslatwallupdate=Slatwall Update Utility
 admin.setting.detailslatwallupdate.availableBleedingEdgeVersion=Available Bleeding Edge Version
 admin.setting.detailslatwallupdate.availableStableVersion=Available Stable Version
