--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -828,6 +828,7 @@ entity.country.streetAddressShowFlag=Show Street Address
 entity.country_plural=Countries
 entity.creditcardtransaction.authorizationcode=Auth. Code
 entity.define.activeFlag=Active
+entity.define.activeFlag_hint=Item is available for utilization in the back-end
 entity.define.amountAuthorized=Amount Authorized
 entity.define.amountCharged=Amount Charged
 entity.define.amountCredited=Amount Credited
@@ -1040,7 +1041,7 @@ entity.pricegroup.inheritsFromNothing=No (Do not inherit)
 entity.pricegroup.name=Price Group Name
 entity.pricegroup_plural=Price Groups
 entity.product=Product
-entity.product.activeFlag_hint=This is used to deactivate a product at the end of it's life.  Products with Active set as "No" will not show up in listings.
+entity.product.activeFlag_hint=Item is available for utilization in the back-end
 entity.product.allowBackOrderFlag=Backorder OK
 entity.product.allowDropShipFlag=Dropship OK
 entity.product.allowPreorderFlag=Preorder OK
@@ -1083,6 +1084,7 @@ entity.product.productType=Product Type
 entity.product.productYear=Product Year
 entity.product.productYear_title=Year
 entity.product.publishedFlag=Published
+entity.product.publishedFlag_hint=Item is available and visible on the front-end (both 'Active' and 'Published' must be selected to display on the front-end)
 entity.product.publishedWeight=Published Weight
 entity.product.qc=QC
 entity.product.qea=QEA
