--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -310,6 +310,7 @@ admin.vendor.processvendororder.processOption.cost=Cost
 admin.vendor.processvendororder.processOption.estimatedReceivalDateTime=Estimated Receival
 admin.vendor.processvendororder.processOption.locationID=Location
 admin.vendor.processvendororder.processOption.quantity=Quantity
+admin.vendor.processvendororder.receivestock=Receive Vendor Order
 admin.vendor.stockreceivers.missingProducts=You must enter order items before processing
 admin.vendor.vendorordertabs.items=Order Items
 admin.vendor.vendorordertabs.products=Products
