--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -332,6 +332,7 @@ admin.warehouse.processStockAdjustment.processAdjustment=Process Adjustment
 admin.warehouse.processstockadjustment.addItems=Add Items
 admin.warehouse.processstockadjustment.processOption.quantity=Quantity
 admin.warehouse.stockadjustments.products=Products
+admin.warehouse.stockadjustments.stockreceivers=Stock Receivers
 admin.warehouse.stockreceivertabs.stockreceiveritems=Items Received
 admin.warehouse_nav=Warehouse
 dashboard.tracksessionissue_error=There is an know issue with you current configuration of Mura & Slatwall that will cause the frontend to lock up.  You can either open up your mura /config/settings.ini and set trackSessionInNewThread\=0 or you can update you mura core to the latest version.
