--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -56,7 +56,9 @@ admin.integration.integrationtabs.settings=Integration Settings
 admin.integration_nav=Integrations
 admin.main=Dashboard
 admin.main.about=About
+admin.main.about_title=About
 admin.main.about_nav=About / Docs
+admin.main.ckfinder_title=File Manager
 admin.main.ckfinder_nav=File Manager
 admin.main.dashboard.neworders=New Orders
 admin.main.dashboard.recentproductreviews=Recent Product Reviews
@@ -299,6 +301,7 @@ admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE A
 admin.setting.updatefrontendviews_nav=Update All Frontend Views
 admin.setting.updateproductcache=Update Product Cache
 admin.setting.updateslatwall=Update Slatwall
+admin.setting.updateslatwall_title=Update Slatwall
 admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_success=Slatwall updated successfully
