Added the plura key for address

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -56,10 +56,10 @@ admin.integration.integrationtabs.settings=Integration Settings
 admin.integration_nav=Integrations
 admin.main=Dashboard
 admin.main.about=About
-admin.main.about_title=About
 admin.main.about_nav=About / Docs
-admin.main.ckfinder_title=File Manager
+admin.main.about_title=About
 admin.main.ckfinder_nav=File Manager
+admin.main.ckfinder_title=File Manager
 admin.main.dashboard.neworders=New Orders
 admin.main.dashboard.recentproductreviews=Recent Product Reviews
 admin.main.dashboard.recentproductupdates=Recently Updated Products
@@ -301,10 +301,10 @@ admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE A
 admin.setting.updatefrontendviews_nav=Update All Frontend Views
 admin.setting.updateproductcache=Update Product Cache
 admin.setting.updateslatwall=Update Slatwall
-admin.setting.updateslatwall_title=Update Slatwall
 admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_success=Slatwall updated successfully
+admin.setting.updateslatwall_title=Update Slatwall
 admin.setting_nav=Settings
 admin.tools_nav=Tools / Help
 admin.vendor=Vendor Manager
@@ -508,6 +508,7 @@ email.orderConfirmation=Order Confirmation
 email.orderDeliveryConfirmation=Order Delivery Confirmation
 entity.AccountPaymentMethod_plural=Account Payment Methods
 entity.Address.norecords=No Addresses Defined
+entity.Address_plural=Addresses
 entity.AlternateSkuCode=Alternate Sku Code
 entity.AlternateSkuCode.alternateSkuCode=Sku Code
 entity.AlternateSkuCode.alternateSkuCodeType=Sku Code Type
