--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -608,8 +608,8 @@ entity.ShippingMethodRate.maximumShipmentItemPrice=Max Fulfillment Subtotal
 entity.ShippingMethodRate.maximumShipmentWeight=Max Fulfillment Weight
 entity.ShippingMethodRate.minimumShipmentItemPrice=Min Fulfillment Subtotal
 entity.ShippingMethodRate.minimumShipmentWeight=Min Fulfillment Weight
-entity.ShippingMethodRate.shipmentItemPriceRange=Fulfillment Item Price Range
-entity.ShippingMethodRate.shipmentWeightRange=Fulfillment Weight Range
+entity.ShippingMethodRate.shipmentItemPriceRange=Item Price Range
+entity.ShippingMethodRate.shipmentWeightRange=Weight Range
 entity.ShippingMethodRate.shippingIntegration=Shipping Integration
 entity.ShippingMethodRate.shippingintegrationmethod=Service Provider Method
 entity.ShippingMethod_plural=Shipping Methods
