--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -488,6 +488,7 @@ define.range=Range
 define.rate=Rate
 define.refund=Refund
 define.renewal=Renewal
+define.renewalSubscriptionBenefits=Renewal Subscription Benefits Name
 define.save=Save
 define.search=Search
 define.select=Select
