Hotfix to add view for option group description

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -190,6 +190,7 @@ admin.product.createproductimage=Upload New Product Image
 admin.product.createproductimage_nav=Add Product Image
 admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
+admin.product.optiongrouptabs.description=Description
 admin.product.optiongrouptabs.options=Options
 admin.product.processproduct.addoption=Add Option
 admin.product.processproduct.addoptiongroup=Add Option Group
