--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -89,7 +89,7 @@ admin.order.processorder.AddOrderItem=Add Order Item
 admin.order.processorder.AddOrderPayment=Add Order Payment
 admin.order.processorder.cancelOrder=Cancel Order
 admin.order.processorder.closeOrder=Close Order
-admin.order.processorder.createReturn=Create Retrun Order
+admin.order.processorder.createReturn=Create Return Order
 admin.order.processorder.placeOnHold=Place Order On Hold
 admin.order.processorder.placeOrder=Place Order
 admin.order.processorder.processOption.autoProcessReceiveReturnFlag=Auto Receive Return
