--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -653,6 +653,8 @@ entity.VendorEmailAddress.emailAddress=Email Address
 entity.VendorOrder.estimatedReceivalDateTime=Estimated Receival
 entity.VendorOrderItem=Order Item
 entity.VendorOrderItem.estimatedReceivalDateTime=Estimated Receival
+entity.VendorOrderItem.quantityReceived=Qty. Received
+entity.VendorOrderItem.quantityUnreceived=Qty. Unreceived
 entity.VendorOrderItem_plural=Order Items
 entity.account=Account
 entity.account.accountEmails=Account Emails
