A couple more updates to inventory, how it is calculated, and also how it is displayed.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -556,6 +556,7 @@ entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
 entity.PriceGroupRate.priceGroupRateID=Price Group Rate ID
 entity.PriceGroupRate.roundingRule=Rounding Rule
+entity.Product.calculatedQATS=QATS
 entity.ProductImage.imageFile=Image
 entity.ProductImage_plural=Product Images
 entity.PromotionQualifier.maximumItemPrice=Maximum Item Price
