Added the ability to define the missing image as a product setting.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1780,6 +1780,7 @@ setting.productImageSmallHeight=Small Image Height
 setting.productImageSmallWidth=Small Image Width
 setting.productMetaDescriptionString=Product Meta Description String
 setting.productMetaKeywordsString=Product Meta Keywords String
+setting.productMissingImagePath=Product Missing Image Path
 setting.productTitleString=Product Title Format
 setting.productTypeDisplayTemplate=Product Type Display Template
 setting.productTypeHTMLTitleString=Product Type HTML Title String
