--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1542,7 +1542,7 @@ permission.product.deleteProductReview=Product Review - Delete
 permission.product.deleteProductType=Product Type - Delete
 permission.product.deleteSubscriptionBenefit=Subscription Benefit - Delete
 permission.product.deleteSubscriptionTerm=Subscription Term - Delete
-permission.product.detailBrand=Brand - Delete
+permission.product.detailBrand=Brand - Detail
 permission.product.detailOptionGroup=Option Group - Detail
 permission.product.detailProductReview=Product Review - Detail
 permission.product.detailProductType=Product Type - Detail
