--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -652,11 +652,11 @@ entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
 entity.VendorEmailAddress.emailAddress=Email Address
 entity.VendorOrder.estimatedReceivalDateTime=Estimated Receival
-entity.VendorOrderItem=Order Item
+entity.VendorOrderItem=Vendor Order Item
 entity.VendorOrderItem.estimatedReceivalDateTime=Estimated Receival
 entity.VendorOrderItem.quantityReceived=Qty. Received
 entity.VendorOrderItem.quantityUnreceived=Qty. Unreceived
-entity.VendorOrderItem_plural=Order Items
+entity.VendorOrderItem_plural=Vendor Order Items
 entity.account=Account
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
