Working on Issue #777

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -271,22 +271,24 @@ admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
-admin.setting.listsettingtabs.brand=Brand Settings
-admin.setting.listsettingtabs.fulfillmentmethod=Fulfillment Method Settings
-admin.setting.listsettingtabs.global=Global Settings
-admin.setting.listsettingtabs.globaladvanced=Global Advanced Settings
-admin.setting.listsettingtabs.globalpage=Global Page Settings
-admin.setting.listsettingtabs.product=Product Settings
-admin.setting.listsettingtabs.producttype=Product Type Settings
-admin.setting.listsettingtabs.shippingmethod=Shipping Method Settings
-admin.setting.listsettingtabs.shippingmethodrate=Shipping Rate Settings
-admin.setting.listsettingtabs.sku=Sku Settings
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.processtask.processOption.taskScheduleID=Schedule
 admin.setting.processtask_nav=Process Task
+admin.setting.settings=Settings
+admin.setting.settings_nav=Settings
 admin.setting.settingtabs.advanced=Advanced Settings
+admin.setting.settingtabs.brand=Brand Settings
+admin.setting.settingtabs.fulfillmentmethod=Fulfillment Method Settings
+admin.setting.settingtabs.global=Global Settings
+admin.setting.settingtabs.globaladvanced=Global Advanced Settings
+admin.setting.settingtabs.globalpage=Global Page Settings
+admin.setting.settingtabs.product=Product Settings
+admin.setting.settingtabs.producttype=Product Type Settings
+admin.setting.settingtabs.shippingmethod=Shipping Method Settings
+admin.setting.settingtabs.shippingmethodrate=Shipping Rate Settings
+admin.setting.settingtabs.sku=Sku Settings
 admin.setting.shippingmethodratetabs.shippingmethodratesettings=Shipping Rate Settings
 admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Rates
 admin.setting.shippingmethodtabs.shippingmethodratesettings=Shipping Rate Settings
