--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -608,7 +608,7 @@ entity.Schedule.recuringType=Recurring Type
 entity.Schedule.scheduleID=Schedule ID
 entity.Schedule.scheduleName=Schedule Name
 entity.ShippingMethodRate.defaultAmount=Default Amount
-entity.ShippingMethodRate.defaultAmount_hint=When using a 'manual' rate this is the amount that will be charged.  If you are using a shipping provider, then this value is the fallback amount if for some reason the shipping provider is unacceable.
+entity.ShippingMethodRate.defaultAmount_hint=When using a 'manual' rate this is the amount that will be charged.  If you are using a shipping provider, then this value is the fallback amount if for some reason the shipping provider is inaccessible.
 entity.ShippingMethodRate.maximumShipmentItemPrice=Max Fulfillment Subtotal
 entity.ShippingMethodRate.maximumShipmentWeight=Max Fulfillment Weight
 entity.ShippingMethodRate.minimumShipmentItemPrice=Min Fulfillment Subtotal
