--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1733,7 +1733,7 @@ setting.emailFromAddress=Email From Address
 setting.emailSubject=Email Subject
 setting.emailToAddress=Email To Address
 setting.fulfillmentMethodAutoLocation=Automatic Fulfillment Location
-setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple
+setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple of that type.
 setting.fulfillmentMethodEmailCC=Email CC
 setting.fulfillmentMethodEmailFrom=Email From
 setting.fulfillmentMethodEmailSubjectString=Email Subject Template
