--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1327,7 +1327,7 @@ entity.stock.sku=sku
 entity.stock.stockID=stockID
 entity.stockAdjustmentItem.quantity=Qty.
 entity.stockReceiver.receiverType=Receiver Type
-entity.stockReceiver.receiverType.order=Order
+entity.stockReceiver.receiverType.order=Return / Exchange Order
 entity.stockReceiver.receiverType.stockAdjustment=Stock Adjustment
 entity.stockadjustment=Stock Adjustment
 entity.stockadjustment.adjustmentDateTime=adjustmentDateTime
