Added currency settings and some default data.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -840,6 +840,10 @@ entity.country.streetAddressRequiredFlag=Require Street Address
 entity.country.streetAddressShowFlag=Show Street Address
 entity.country_plural=Countries
 entity.creditcardtransaction.authorizationcode=Auth. Code
+entity.currency=Currency
+entity.currency.currencyLocal=Currency Local
+entity.currency.currencyName=Currency Name
+entity.currency_plural=Currencies
 entity.define.activeFlag=Active
 entity.define.activeFlag_hint=Item is available for utilization in the back-end
 entity.define.amountAuthorized=Amount Authorized
@@ -1268,6 +1272,8 @@ entity.shippingmethodrate.shippingMethodRateID=Shipping Method Rate ID
 entity.shippingmethodrate.shippingRate=Shipping Charge
 entity.shippingmethodrate.shippingRateID=Shipping Rate ID
 entity.shippingmethodrate_plural=Shipping Method Rates
+entity.site=Site
+entity.site_plural=Sites
 entity.sku=SKU
 entity.sku.defaultFlag=Is Default
 entity.sku.delete_success=The SKU was deleted successfully.
@@ -1797,6 +1803,10 @@ setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
 setting.skuAllowPreorderFlag_hint=Indicate whether this product can be preordered
+setting.skuCurrency=Default Currency
+setting.skuCurrency_hint=Skus can be sold in multiple currencies, however this setting dictates the currency that is stored as the primary price.
+setting.skuEligibleCurrencies=Eligible Currencies
+setting.skuEligibleCurrencies_hint=This defines the active currencies that a sku is avalable for sale in.
 setting.skuEligibleFulfillmentMethods=Eligible Fulfillment Methods
 setting.skuEligibleOrderOrigins=Eligible Order Origins
 setting.skuEligiblePaymentMethods=Eligible Payment Methods
