--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -223,6 +223,7 @@ admin.product.producttypetabs.producttypesettings=Product Type Settings
 admin.product.producttypetabs.skusettings=Sku Settings
 admin.product.skutabs.accesscontents=Access Content
 admin.product.skutabs.alternateskucodes=Alternate Sku Codes
+admin.product.skutabs.currencies=Currencies
 admin.product.skutabs.inventory=Inventory
 admin.product.skutabs.options=Options
 admin.product.skutabs.priceGroups=Price Groups
@@ -621,6 +622,9 @@ entity.ShippingMethod_plural=Shipping Methods
 entity.Sku.exclusive=Image is exclusive for this sku
 entity.Sku.priceGroupRates=Price Group Rates
 entity.Sku.userDefinedPriceFlag=User Defined Price
+entity.SkuCurrency=Sku Currency
+entity.SkuCurrency.listPrice=List Price
+entity.SkuCurrency.price=Price
 entity.StockAdjustment.stockAdjustmentStatusType=Status
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.StockAdjustmentItem_plural=Stock Adjustment Items
@@ -841,6 +845,7 @@ entity.country.streetAddressShowFlag=Show Street Address
 entity.country_plural=Countries
 entity.creditcardtransaction.authorizationcode=Auth. Code
 entity.currency=Currency
+entity.currency.currencyCode=Currency Code
 entity.currency.currencyLocal=Currency Local
 entity.currency.currencyName=Currency Name
 entity.currency_plural=Currencies
